--- a/resources/views/index/contact.twig
+++ b/resources/views/index/contact.twig
@@ -24,20 +24,25 @@
 					<h3 class="contact-page-title">Contact Us</h3>
 					<!--=======  single contact block  =======-->
 					<div class="single-contact-block">
-						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon1.png" alt=""> Address
+						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon1.png" alt="">
+							{{services.translate.trans('Plentymarket::WebIndexContact.address')}}
 						</h4>
 						<p>{{services.config.getTemplateConfig('basic.address')}}</p>
 					</div>
 					<!--=======  End of single contact block  =======-->
 					<!--=======  single contact block  =======-->
 					<div class="single-contact-block">
-						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon2.png" alt=""> Phone</h4>
+						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon2.png" alt="">
+							{{services.translate.trans('Plentymarket::WebIndexContact.phone')}}
+						</h4>
 						<p>{{services.config.getTemplateConfig('basic.phone')}}</p>
 					</div>
 					<!--=======  End of single contact block  =======-->
 					<!--=======  single contact block  =======-->
 					<div class="single-contact-block">
-						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon3.png" alt=""> Email</h4>
+						<h4><img src="{{plugin_path("Plentymarket")}}/images/icons/contact-icon3.png" alt="">
+							{{services.translate.trans('Plentymarket::WebIndexContact.email')}}
+						</h4>
 						<p>{{services.config.getTemplateConfig('basic.email')}}</p>
 					</div>
 					<!--=======  End of single contact block  =======-->
