--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -96,16 +96,20 @@
 					<div class="social-link">
 						<span class="title">Follow Us:</span>
 						<ul>
-							<li><a target="_blank" href="https://www.twitter.com/"><i class="fa fa-twitter"></i></a>
+							<li>
+								<a target="_blank" href="https://twitter.com/Mercury_Living">
+									<i class="fa fa-twitter"></i>
+								</a>
 							</li>
-							<li><a target="_blank" href="https://www.rss.com/"><i class="fa fa-rss"></i></a></li>
-							<li><a target="_blank" href="https://plus.google.com/"><i class="fa fa-google-plus"></i></a>
 							</li>
-							<li><a target="_blank" href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+							<li>
+								<a target="_blank" href="https://www.facebook.com/www.mercuryliving.it/"><i class="fa fa-facebook"></i></a>
 							</li>
-							<li><a target="_blank" href="https://www.youtube.com/"><i class="fa fa-youtube"></i></a>
+							<li>
+								<a target="_blank" href="https://www.youtube.com/channel/UCCcAZuzgmTjCdHotT7EKTw?view_as=subscriber"><i class="fa fa-youtube"></i></a>
 							</li>
-							<li><a target="_blank" href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+							<li>
+								<a target="_blank" href="https://www.instagram.com/mercuryliving/"><i class="fa fa-instagram"></i></a>
 							</li>
 						</ul>
 					</div>
