--- a/resources/views/common/header.twig
+++ b/resources/views/common/header.twig
@@ -91,7 +91,7 @@
 						<!--=======  single dropdown  =======-->
 						<div class="single-dropdown">
 							{%if language=='de'%}
-								<img src="{{plugin_path("Plentymarket")}}/images/flags/1.png" alt="">
+								<img src="{{plugin_path("Plentymarket")}}/images/flags/1.jpg" alt="">
 							{%elseif language=='it'%}
 								<img src="{{plugin_path("Plentymarket")}}/images/flags/3.png" alt="">
 							{%endif%}
