--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -6246,7 +6246,7 @@ h3.comment-counter {
     color: #ffffff;
     background-color: #1e1e1e;
     border-color: #1e1e1e;
-    width: 140px; }
+  }
     .discount-coupon form input[type="submit"]:hover {
       background-color: #cea45f;
       border-color: #cea45f; }
