--- a/resources/views/index/index.twig
+++ b/resources/views/index/index.twig
@@ -171,7 +171,7 @@
 							<div class="ptk-product">
 								<div class="image">
 									<a href="/index/product/{{item.id}}">
-										<img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 198px;height: 198px;">
+										<img src="{{item.images.0}}" class="img-fluid" alt="">
 									</a>
 									<!--=======  hover icons  =======-->
 									<a class="hover-icon preview" data-id="{{item.id}}" href="#"><i class="lnr lnr-eye"></i></a>
@@ -257,7 +257,7 @@
 									<div class="ptk-product">
 										<div class="image">
 											<a href="/index/product/{{item.id}}">
-												<img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 255px;height: 297px;">
+												<img src="{{item.images.0}}" class="img-fluid" alt="">
 											</a>
 											<!--=======  hover icons  =======-->
 											<a class="hover-icon preview" data-id="{{item.id}}" href="#"><i class="lnr lnr-eye"></i></a>
@@ -266,7 +266,7 @@
 											<!--=======  End of hover icons  =======-->
 											<!--=======  badge  =======-->
 											<div class="product-badge">
-{#												<span class="discount-badge">-{{item.discount}}%</span>#}
+												{#												<span class="discount-badge">-{{item.discount}}%</span>#}
 											</div>
 											<!--=======  End of badge  =======-->
 										</div>
@@ -394,7 +394,7 @@
 							<div class="ptk-product">
 								<div class="image">
 									<a href="/index/product/{{item.id}}">
-										<img src="{{item.images.0}}" class="img-fluid" alt="" style="width: 255px;height: 255px;">
+										<img src="{{item.images.0}}" class="img-fluid" alt="">
 									</a>
 									<!--=======  hover icons  =======-->
 									<a class="hover-icon preview" data-id="{{item.id}}" href="#"><i class="lnr lnr-eye"></i></a>
