--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -103,13 +103,29 @@
 							</li>
 							</li>
 							<li>
-								<a target="_blank" href="https://www.facebook.com/www.mercuryliving.it/"><i class="fa fa-facebook"></i></a>
+								<a target="_blank" href="https://www.facebook.com/www.mercuryliving.it/">
+									<i class="fa fa-facebook"></i>
+								</a>
 							</li>
 							<li>
-								<a target="_blank" href="https://www.youtube.com/channel/UCCcAZuzgmTjCdHotT7EKTw?view_as=subscriber"><i class="fa fa-youtube"></i></a>
+								<a target="_blank" href="https://www.youtube.com/channel/UCCcAZuzgm-TjCdHotT7EKTw?view_as=subscriber">
+									<i class="fa fa-youtube"></i>
+								</a>
 							</li>
 							<li>
-								<a target="_blank" href="https://www.instagram.com/mercuryliving/"><i class="fa fa-instagram"></i></a>
+								<a target="_blank" href="https://www.instagram.com/mercuryliving/">
+									<i class="fa fa-instagram"></i>
+								</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://www.linkedin.com/company/mercurylivingsrl/">
+									<i class="fa fa-linkedin"></i>
+								</a>
+							</li>
+							<li>
+								<a target="_blank" href="https://www.pinterest.it/mercurymedia25/">
+									<i class="fa fa-pinterest"></i>
+								</a>
 							</li>
 						</ul>
 					</div>
